Prevent the timeline height from collapsing

--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -10,7 +10,7 @@
 }
 
 #toolbox-timeline {
-  height: 58px;
+  min-height: 58px;
   background: var(--theme-toolbar-background);
   border-top: 1px solid var(--theme-splitter-color);
   border-bottom: 1px solid var(--theme-splitter-color);
